Mod ex9, added ex10

--- a/Exercise9/atcmd/Jenkinsfile
+++ b/Exercise9/atcmd/Jenkinsfile
@@ -28,9 +28,9 @@ pipeline {
         ],
         tools: [
           Custom(
-            customXSL: 'unity.xsl', 
+            customXSL: 'unity.xsl',
             pattern: 'build/artifacts/test/*.xml',
-            skipNoTestFiles: true, 
+            skipNoTestFiles: false,
             stopProcessingIfError: false
           )
         ]
